Removed obsolete MaxPermSize